--- a/assets/css/course.css
+++ b/assets/css/course.css
@@ -63,12 +63,13 @@
   flex-basis: 22%;
   font-size: 16px;
   font-weight: 700;
-  margin: 0;
+  margin: 2px;
+  /* padding: 2px; */
   line-height: normal;
 }
 .cousecontent p.last{
   white-space: nowrap;
-  max-width: 36%;
+  max-width: 40%;
   flex-basis: 36%;
 }
 .cousecontent p.last b{
@@ -1573,8 +1574,7 @@ bottom: 85px;
   .faq .faq-list a.collapse{font-size: 14px;}
   .faq .faq-list p{font-size: 12px;}
   .frequentlycontainer{padding: 15px 15px 30px 15px;display: block;}
-  .frequentlycontainer .row .col-6,
-  .leaningcourse .row .col-4{min-width: 280px;}
+  .frequentlycontainer .row .col-6{min-width: 280px;}
   .faqtotalprice{margin-left: 0;position: static;max-width: 100%;margin-top: 20px;padding: 10px 15px;}
   .faqtotalprice h4 small,
   .faqtotalprice h4 del{font-size: 12px;}
