--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -718,7 +718,10 @@ text-align: center;
   background: #1a1c25;
   border-radius: 10px;
 }
-.grid-item>img{height: 40px;}
+.grid-item>img{
+  height: 40px;
+
+}
 .studentnum {
   font-size: 26px;
   color: #ff7a01;
@@ -848,6 +851,7 @@ section {
 .sectionblackbg .bannersubsection .cousecontent{
   bottom: -64px;
 }
+
 .section-bg .container,
 .lightbg {
   background-color: #1c1e25;
@@ -1439,9 +1443,10 @@ padding: 5px 20px;
     padding: 15px;
     margin: 0 7px;
   }
-  .services .icon-box::after {
+  /* .services .icon-box::after {
     display: none;
-  }
+  } */
+
   .services .icon-box h4 {
     font-size: 14px;
   }
@@ -1781,7 +1786,7 @@ position: relative;
 .courselst h4 {
   color: #fff;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 800;
   margin: 0;
 }
 .courselstarrow a {
@@ -1829,6 +1834,7 @@ position: relative;
   }
   .leaningcourse .box .boxcontainer h5,
   .courselst h4 {
+    width: 60vw;
     font-size: 13px;
   }
   .enrollstu,
@@ -1853,6 +1859,25 @@ position: relative;
     max-width: 80%;
     margin: 0 auto 30px auto;
   } */
+  .courselst h4 {
+    width: 55vw;
+    font-size: 13px;
+  }
+}
+@media (max-width: 480px){
+  .services .icon-box::after {
+    /* position: absolute; */
+    /* content: ""; */
+    right: 0;
+    top: -21px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-right: 0px ;
+    height: 1px;
+    width: 100%;
+  }
+  .services .icon-box:last-child:after {
+    display: block;
+  }
 }
 
 @media (max-width: 420px) {
@@ -1860,6 +1885,10 @@ position: relative;
     max-width: 100%;
     margin: 0 auto 30px auto;
   } */
+  .courselst h4 {
+    width: 60vw;
+    font-size: 13px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -2018,6 +2047,17 @@ position: relative;
     padding: 10px 15px;
   }
 }
+
+/* adding sam */
+@media (max-width: 480px) {
+  
+  .btndreamjobs{
+    min-width: 130px;
+    padding: 10px 0px;
+  }
+}
+/*  */
+
 /*dream jobs css end*/
 /* blog section css start */
 .col-md-4 .blog-box {
@@ -2142,7 +2182,7 @@ position: relative;
   margin-top: 0 !important;
  }
  .grid-layout{
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
  }
   .blog .btn-primary {
     padding: 10px 15px 11px 15px;
@@ -2454,7 +2494,7 @@ font-weight: 700;
     flex-basis: 25%;
 }
 .learncontent .servicesbox .icon-box h4{
-  font-size: 14px;
+  font-size: 10px;
 }
 .learncontent .servicesbox .icon-box::after {
   position: absolute;
@@ -2562,12 +2602,14 @@ width: 68px;
 .topplacement{
   position: relative;
 }
-.topplacement .icontp{
+/* .topplacement .icontp{
   position: absolute;
-  top: -75px;
-  left: 20px;
+  top: -70px;
+  left: -10px;
   z-index: 2;
-}
+  width: 14%;
+
+} */
 .marginB50{
   margin-bottom: 50px;
 }
@@ -3015,6 +3057,14 @@ top: calc(50% - 25px);
       max-width: 1140px;
       margin: 0 auto;
     }
+    .topplacement .icontp{
+      position: absolute;
+      top: -70px;
+      left: -10px;
+      z-index: 2;
+      width: 14%;
+      /* height: 30%; */
+    }
    
     
   }
@@ -3025,6 +3075,14 @@ top: calc(50% - 25px);
     }
     .btnreview:last-child {
       margin-right: 0;
+    }
+    /* sam */
+    .topplacement .icontp{
+      position: absolute;
+      top: -70px;
+      left: -10px;
+      z-index: 2;
+      width: 17%;
     }
     
     
@@ -3049,6 +3107,15 @@ top: calc(50% - 25px);
     #footer .footer-logo-social .social-links a {
       font-size: 18px;
     }
+    /* sam */
+    .topplacement .icontp{
+      position: absolute;
+      top: -60px;
+      left: -8px;
+      z-index: 2;
+      width: 19%;
+      /* height: 30%; */
+    }
    
   }
 
@@ -3064,6 +3131,15 @@ top: calc(50% - 25px);
   .learncontent .nav-tabs .nav-item{
     margin-right: 0;
     margin-bottom: 20px;
+  }
+  /* sam */
+  .topplacement .icontp{
+    position: absolute;
+    top: -45px;
+    left: -5px;
+    z-index: 2;
+    width: 22%;
+    /* height: 30%; */
   }
   .learncontent .servicesbox{
     margin: 15px 0 0 0;
@@ -3164,4 +3240,32 @@ font-size: 14px;
     padding-right: 15px;
   }
   
+}
+
+@media (max-width: 576px) {
+  /* sam */
+  .topplacement .icontp{
+    position: absolute;
+    top: -43px;
+    left: -6px;
+    z-index: 2;
+    width: 24%;
+    
+  }
+   
+
+}
+
+@media (max-width: 460px) {
+  /* sam */
+  .topplacement .icontp{
+    position: absolute;
+    top: -40px;
+    left: -2px;
+    z-index: 2;
+    width: 28%;
+   
+  }
+   
+
 }
